# pyempad-calibrate

./: .coveragerc  .gitattributes  .gitignore  LICENSE  README.md  Viz_EMPAD.ipynb  pyproject.toml  setup.py  tox.ini
.github/workflows/: build-test.yaml
src/pyempad_calibrate/: command.py  utils.pyx
tests/: test_basic.py  tests_basic.py
tests/data/: B2A_prelim.r32  B2B_prelim.r32  FFA_prelim.r32  FFB_prelim.r32  G1A_prelim.r32  G1B_prelim.r32  G2A_prelim.r32  G2B_prelim.r32  bg_subtracted_n1000.raw
tests/data/bkgd/: n1000.bkgd
tests/data/raw/: n1000.raw  raw_n1000.raw
