[build-system]
requires = [
  "setuptools>=61.2",
  "Cython>=3.0.3",
  "numpy>=2.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyempad-calibrate"
version = "0.1.0"
description = "Routines for calibrating EMPAD data"
authors = [
    { name = "PARADIM Data Collective", email = "people@paradim.org" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "materialscience",
]
requires-python = ">=3.10.3"

# keep in sync with minimal_requirements.txt
dependencies = [
    "click>=8.0.1",
    "numpy>=2.0.1, <3",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause"

[project.scripts]
pyempad-calibrate = "pyempad_calibrate.command:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "Cython>=3.0.3",   # for Cython.Coverage
    "girder-client",
    "tox",
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.pytest.ini_options]
testpaths = "tests"
addopts = [
    "--import-mode=importlib",
    "--cov=pyempad_calibrate",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-fail-under=100",
]
